# cocos2d-x-cpp-template

./: CMakeLists.txt  README.md
proj.android/: .gitignore  settings.gradle
